fix(UI): make sponsor progress overlap tabpanel focus outline

--- a/src/action/components/sponsor-progress/index.css
+++ b/src/action/components/sponsor-progress/index.css
@@ -1,6 +1,7 @@
 :host {
   position: sticky;
   bottom: 0;
+  z-index: 1;
 
   display: flex;
   flex-direction: row;
